--- a/Client/index.html
+++ b/Client/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/style.css" />
+    <link rel="icon" href="./sky.png" type="image/png" />
     <title>Weather app by Elad Bar</title>
   </head>
 
